# swagger.json
@@ -5,22 +5,51 @@
     "description": "Tasks Manager API by Mignrod",
     "version": "1.0.0"
   },
-  "host": "project2-api-rest.onrender.com",
+  "host": "localhost:3001",
   "basePath": "/",
-  "schemes": ["https"],
+  "schemes": ["http"],
   "securityDefinitions": {
-    "GitHubOAuth": {
+    "githubAuth": {
       "type": "oauth2",
+      "flow": "accessCode",
       "authorizationUrl": "https://github.com/login/oauth/authorize",
       "tokenUrl": "https://github.com/login/oauth/access_token",
-      "flow": "accessCode",
       "scopes": {
-        "read:user": "Read user info",
-        "user:email": "Access to user email"
+        "read:user": "Read user info"
       }
     }
   },
   "paths": {
+    "/auth/github": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/auth/github/callback": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api-docs": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/users/": {
       "get": {
         "tags": ["Users"],
@@ -365,7 +394,7 @@
   },
   "security": [
     {
-      "GitHubOAuth": ["read:user", "user:email"]
+      "githubAuth": ["read:user"]
     }
   ]
 }
